--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.7",
-        "postcss": "^8.4.14",
+        "cssnano": "^5.1.14",
+        "postcss": "^8.4.21",
         "prettier": "^2.8.0",
         "prettier-plugin-tailwindcss": "^0.1.13",
         "tailwindcss": "^3.2.4",
@@ -25,5 +26,8 @@
         "vite"
     ],
     "author": "Méschac irung",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "brotli": "^1.3.3"
+    }
 }
