--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "author": "Méschac irung",
     "license": "ISC",
     "dependencies": {
-        "brotli": "^1.3.3"
+        "brotli": "^1.3.3",
+        "flowbite": "^1.6.3"
     }
 }
