--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "autoprefixer": "^10.4.7",
         "cssnano": "^5.1.14",
         "postcss": "^8.4.21",
+        "postcss-cli": "^10.1.0",
         "prettier": "^2.8.0",
         "prettier-plugin-tailwindcss": "^0.1.13",
         "tailwindcss": "^3.2.4",
